--- a/src/components/leftBar/leftBar.scss
+++ b/src/components/leftBar/leftBar.scss
@@ -10,7 +10,7 @@
     background-color: themed("bg");
     color: themed("textColor");
 
-    @include mobile{
+    @include mobile {
       display: none;
     }
 
@@ -58,6 +58,9 @@
           display: flex;
           align-items: center;
           gap: 10px;
+          border: none;
+          width: 100%;
+          cursor: pointer;
 
           img {
             width: 30px;
